1.8.1
-----
1. Fix multi-disc handling breaking queue display.
2. Fix starting track when selecting 'Play album from track' on a multi-cd album
   where LMS is set to group discs.
3. Remove 'Play this mix' item even if there are no tracks for mix.
4. Adjust portrait max size calculation.
5. Add work-around for older browser's that don't support CSS min()

1.8.0
-----
 1. Set OpenFrame default icon.
 2. Add more icon choices.
 3. Use MAC/playerid to set icon of raspberry-pi - thanks to 'mavit'
 4. Increase portrait now-playing font size if both width and height are 750px
    or more.
 5. For mobile devices, switch to landscape when width >= height*1.3, else
    switch when width >= height*1.5 (previous ratio for all).
 6. Re-layout portrait now-playing; cover is at top, all text is shown below
    (fade out if insufficient space, scrollable), rating shown at top of cover.
 7. Allow song details text in landscape now-playing to scroll.
 8. Add 'Go to artist' and 'Go to album' actions to now-playing cover context
    menu.
 9. If invoke browse from queue, or now-playing, in mobile layout, then revert
    to this page when navigating back.
10. Show changes in plugin info dialog.
11. Press, not long-press, on queue nav whilst in queue view scrolls to current.
12. Adjust now-playing landscape text size.
13. Check now-playing landscape mode on all resizes, not just width.
14. Don't attempt to animate current queue element if already animating it.
15. Hide 'CD Player' and 'Remote Libraries' from 'Settings' dialog 'Home screen
    items' selection unless these are enabled in LMS.
16. Allow to add, and remove, players from group via drag'n'drop. (Requires
    v0.13.1, or later, of Groups plugin)
17. If clicked action's nextwindow is 'nowPlaying' then switch to now-playing
    view on mobile layout.
18. Fix adding a selection of MusicIP mix tracks to queue.
19. Add czech translation - thanks to Kucheek