@@ -26,11 +26,13 @@
 "Alarm settings":"",
 "Alarms":"",
 "Album":"",
+"Album Artists":"",
 "Album Mix":"",
 "Album Review":"",
 "Album gain":"",
 "Albums":"",
 "All":"",
+"All Artists":"",
 "All options":"",
 "Alphabetically sort favorites, rather than server supplied order.":"",
 "Already in favorites":"",
@@ -75,6 +77,7 @@
 "Collapse now playing":"",
 "Color":"",
 "Color toolbars":"",
+"Compilations":"",
 "Composers":"",
 "Conductors":"",
 "Continuous":"",
