@@ -453,6 +453,9 @@
 "%1 Years":"%1 roků",
 "1 day":"1 den",
 "%1 days":"%1 dní",
+"Album Artists":"Interprets alba",
+"All Artists":"Všichni interpreti",
+"Compilations":"Sbírka",
 "Display rating stars.":"",
 "Show rating":""
 }
