@@ -441,11 +441,14 @@
 "%1 Years":"%1 år",
 "1 day":"1 dag",
 "%1 days":"%1 dage",
+"Album Artists":"Albumkunstnere",
+"All Artists":"Alle kunstnere",
 "Appended album to the play queue":"",
 "Appended all albums to the play queue":"",
 "Application settings":"",
 "Changes":"",
 "Color toolbars":"",
+"Compilations":"Kompilationer",
 "Darker":"",
 "Display rating stars.":"",
 "Drop here to remove from group":"",
