@@ -430,10 +430,13 @@
 "%1 Years":"%1 Jahre",
 "1 day":"Ein Tag",
 "%1 days":"%1 Tage",
+"Album Artists":"Album-Interpreten",
+"All Artists":"Alle Interpreten",
 "Alt+%1":"",
 "Alt+N":"",
 "Audio":"",
 "Changes":"",
+"Compilations":"Kompilationen",
 "Disc %1":"",
 "Display rating stars.":"",
 "Drop here to remove from group":"",
