@@ -42,11 +42,13 @@
 "Alarm settings":"",
 "Alarms":"",
 "Album":"",
+"Album Artists":"",
 "Album Mix":"",
 "Album Review":"",
 "Album gain":"",
 "Albums":"",
 "All":"",
+"All Artists":"",
 "All options":"",
 "Alt+%1":"",
 "Alt+N":"",
@@ -87,6 +89,7 @@
 "Clear queue":"",
 "Close":"",
 "Collapse now playing":"",
+"Compilations":"",
 "Composers":"",
 "Conductors":"",
 "Continuous":"",
