@@ -66,6 +66,7 @@
 "Cancel":"Annuler",
 "Category":"Catégorie",
 "Change library":"Changer de bibliothèque",
+"Changes":"Changements",
 "Check the standard items which you wish to appear on the home screen.":"Cocher les éléments que vous souhaitez voir apparaître sur l'écran d'accueil.",
 "Choose position":"Choisir la position",
 "Clear":"Vider",
@@ -99,6 +100,7 @@
 "Delete the selected items?":"Supprimer les éléments sélectionnés ?",
 "Description":"Description",
 "Disc %1":"Disque %1",
+"Display rating stars.":"Afficher les étoiles de notation.",
 "Display technical info":"Afficher les informations techniques",
 "Do not sleep":"Ne pas mettre en veille",
 "Don't Stop The Music":"Don't Stop The Music",
@@ -110,6 +112,7 @@
 "Draw background":"Générer un arrière plan",
 "Draw large letter when scrolling certain lists (e.g. local artists, albums, etc.)":"Générer des grosses lettres lors du défilement de certaines listes triées (artistes, albums...)",
 "Draw letter overlay":"Générer des lettres en surimpression",
+"Drop here to remove from group":"Déposer ici pour retirer du groupe",
 "E-Mail":"Email",
 "ERROR: List processing failed":"ERREUR: le traitement de la liste a échoué",
 "Each player may be assigned a 'virtual' library. If set then this will be used to restrict song selection for 'Random Mix' (only songs from the chosen library will be used), and other modes. This setting might also affect library browsing with other LMS control points (such as the default web UI).":"Chaque platine peut se voir attribuer une bibliothèque 'virtuelle'. Si définie, elle sera utilisée pour restreindre la sélection 'Morceaux au hasard' (seuls les morceaux de la bibliothèque choisie seront utilisés) ainsi que d'autres fonctions. Ce paramètre peut également affecter la navigation dans la bibliothèque via les autres interfaces de pilotage de LMS (comme l'interface utilisateur Web par défaut).",
@@ -152,6 +155,8 @@
 "GitHub development page":"Page GitHub du projet de développement",
 "Go back":"Retourner",
 "Go home":"Retour à l'accueil",
+"Go to album":"Aller à l'album",
+"Go to artist":"Aller à l'artiste",
 "Go to homescreen":"Aller à l'écran d'accueil",
 "Group Players":"Groupes de platines",
 "Group members":"Membres du groupe",
@@ -318,6 +323,7 @@
 "Show image":"Afficher l'image",
 "Show information in tabs":"Afficher les informations dans des onglets",
 "Show playback controls and details of current track on Android's lock screen and notifications.":"Afficher les commandes de lecture et les détails de la piste actuelle sur l'écran de verrouillage et les notifications d'Android.",
+"Show rating":"Afficher la notation",
 "Show track information":"Afficher les informations de la piste",
 "Show track number":"Afficher le numéro de piste",
 "Show track's album number next to title.":"Affiche le numéro de la piste à côté du titre.",
@@ -449,10 +455,7 @@
 "%1 Years":"%1 années",
 "1 day":"1 jour",
 "%1 days":"%1 jours",
-"Changes":"Changements",
-"Display rating stars.":"Afficher les étoiles de notation.",
-"Drop here to remove from group":"Déposer ici pour retirer du groupe",
-"Go to album":"Aller à l'album",
-"Go to artist":"Aller à l'artiste",
-"Show rating":"Afficher la notation"
+"Album Artists":"Artistes des Albums",
+"All Artists":"Tous les Artistes",
+"Compilations":"Compilations"
 }
