@@ -305,6 +305,8 @@
 "Adding tracks...":"",
 "Advanced":"",
 "Advanced search":"",
+"Album Artists":"Artistas album",
+"All Artists":"Tutti gli artisti",
 "All options":"",
 "Alt+%1":"",
 "Alt+N":"",
@@ -320,6 +322,7 @@
 "Clear queue":"",
 "Color":"",
 "Color toolbars":"",
+"Compilations":"Compilation",
 "Continuous":"",
 "Country":"",
 "Creator":"",
