@@ -66,6 +66,7 @@
 "Cancel":"Annuleren",
 "Category":"Categorie",
 "Change library":"Verander muziek collectie",
+"Changes":"Veranderingen",
 "Check the standard items which you wish to appear on the home screen.":"Vink de standaard items aan die op het startpagina dienen te komen.",
 "Choose position":"Kies positie",
 "Clear":"Leegmaken",
@@ -99,6 +100,7 @@
 "Delete the selected items?":"Verwijder alle geselecteerde items?",
 "Description":"Beschrijving",
 "Disc %1":"Disc %1",
+"Display rating stars.":"Toon ratings",
 "Display technical info":"Toon technische info",
 "Do not sleep":"Niet slapen",
 "Don't Stop The Music":"Don't Stop The Music",
@@ -110,6 +112,7 @@
 "Draw background":"Achtergrond",
 "Draw large letter when scrolling certain lists (e.g. local artists, albums, etc.)":"Toon letter bij scrollen van bepaalde lijsten (bijv. artiesten, albums, etc.)",
 "Draw letter overlay":"Toon letter overlay",
+"Drop here to remove from group":"Zet hier neer om uit de groep te verwijderen",
 "E-Mail":"E-mail",
 "ERROR: List processing failed":"ERROR: Lijst verwerking mislukt",
 "Each player may be assigned a 'virtual' library. If set then this will be used to restrict song selection for 'Random Mix' (only songs from the chosen library will be used), and other modes. This setting might also affect library browsing with other LMS control points (such as the default web UI).":"Aan elke speler kan een 'virtuele' bibliotheek worden toegewezen. Indien ingesteld, wordt dit gebruikt om de nummerkeuze voor 'Willekeurige Mix' te beperken (alleen nummers uit de gekozen bibliotheek worden gebruikt) en andere modi. Deze instelling kan ook invloed hebben op het browsen in de muziekbibliotheek via andere manieren (zoals de standaard web-UI).",
@@ -152,6 +155,8 @@
 "GitHub development page":"Github pagina",
 "Go back":"Ga terug",
 "Go home":"Ga naar hoofdmenu",
+"Go to album":"Ga naar album",
+"Go to artist":"Ga naar artiest",
 "Go to homescreen":"Ga naar startpagina",
 "Group Players":"Groep Spelers",
 "Group members":"Groep deelnemers",
@@ -318,6 +323,7 @@
 "Show image":"Afbeelding weergeven",
 "Show information in tabs":"Informatie weergeven in tabs",
 "Show playback controls and details of current track on Android's lock screen and notifications.":"Toon afspeelknoppen en info van het huidige nummer op Android's vergrendel scherm en notificaties",
+"Show rating":"Toon rating",
 "Show track information":"Nummer informatie weergeven",
 "Show track number":"Track nummer weergeven",
 "Show track's album number next to title.":"Het nummer van de track weergeven naast de titel",
@@ -449,10 +455,7 @@
 "%1 Years":"%1 Jaren",
 "1 day":"1 dag",
 "%1 days":"%1 dagen",
-"Changes":"Veranderingen",
-"Display rating stars.":"Toon ratings",
-"Drop here to remove from group":"Zet hier neer om uit de groep te verwijderen",
-"Go to album":"Ga naar album",
-"Go to artist":"Ga naar artiest",
-"Show rating":"Toon rating"
+"Album Artists":"Albumartiesten",
+"All Artists":"Alle artiesten",
+"Compilations":"Verzamelingen"
 }
