@@ -438,11 +438,14 @@
 "%1 Years":"%1 Лет",
 "1 day":"1 день",
 "%1 days":"%1 дней",
+"Album Artists":"Исполнитель альбома",
+"All Artists":"Все исполнители",
 "Appended album to the play queue":"",
 "Appended all albums to the play queue":"",
 "Application settings":"",
 "Changes":"",
 "Color toolbars":"",
+"Compilations":"Сборки",
 "Darker":"",
 "Display rating stars.":"",
 "Drop here to remove from group":"",
