@@ -6,6 +6,8 @@
 3. Remove 'Play this mix' item even if there are no tracks for mix.
 4. Adjust portrait max size calculation.
 5. Add work-around for older browser's that don't support CSS min()
+6. When browsing genres, show 'All Artists' and 'Album Artists' if LMS set to
+   use two separate lists, and also show 'Compilations'
 
 1.8.0
 -----
